--- a/README.adoc
+++ b/README.adoc
@@ -8,7 +8,7 @@ PIG, also known as Package Info Generator, is a Java annotation processor that g
 
 === Step 1
 
-Add either "pig.template" (logic-less simple text replacement template) or "pig.ftl" (freemarker template) file to your project's root directory.
+Add either "pig.template" (logic-less, simple text replacement template) or "pig.ftl" (freemarker template) file to your project's root directory.
 You can set the content to the example below:
 
 For "pig.template":
@@ -30,7 +30,7 @@ package ${packageName};
 ----
 
 You must choose between using "pig.template" or "pig.ftl" file.
-The former is generally faster but latter allows usage of conditional instructions as allowed by Freemarker template engine allowing generation of different content for "package-info.java" files depending on placeholder values.
+The former is generally faster but latter enables usage of conditional instructions as allowed by Freemarker template engine.
 
 For the list of all available placeholders, see the "Placeholders" section below.
 
@@ -158,4 +158,4 @@ Note: When compiling project with JDK9+, the `+Generated+` annotation will actua
 You can create multiple `+pig.template+`/`+pig.ftl+` files in your project.
 For every package that contains at least one compilation unit, PIG will try to locate closest
 `+pig.template+` or `+pig.ftl+` file starting from directory representing such package and going up, until it finds one or reaches the root folder.
-This allows you, for example, to create a catch-all `template file in the root directory of your project and a more specific template file in `+src/main/java/foo/bar+` so package `+foo.bar+` and all its subpackages will have a different `+package-info.java+` file generated for them.
+This allows you, for example, to create a catch-all template file in the root directory of your project and a more specific template file in `+src/main/java/foo/bar+` so package `+foo.bar+` and all its subpackages will have a different `+package-info.java+` file generated for them.
